# mind-map

./: CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
src/: app.rs  graph.rs  layout.rs  main.rs  node.rs  ollama.rs
