[package]
name = "mind-map"
version = "0.1.0"
edition = "2024"

[dependencies]
ollama-rs = { version = "0.3.4", features = ["tool-implementations"] }
schemars = "1.2"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
petgraph = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dioxus = { version = "0.6", features = ["desktop"] }
